Stonebreak: cleanup of LoadingScreen.java